--- a/app/src/main/res/drawable/ic_icon_minus.xml
+++ b/app/src/main/res/drawable/ic_icon_minus.xml
@@ -6,8 +6,8 @@
   <path
       android:strokeWidth="1"
       android:pathData="M16.0391,8.6C16.0391,12.7421 12.6812,16.1 8.5391,16.1C4.3969,16.1 1.0391,12.7421 1.0391,8.6C1.0391,4.4579 4.3969,1.1 8.5391,1.1C12.6812,1.1 16.0391,4.4579 16.0391,8.6Z"
-      android:fillColor="#272727"
-      android:strokeColor="#272727"/>
+      android:fillColor="#43a047"
+      android:strokeColor="#43a047"/>
   <group>
     <path
         android:pathData="M11.0391,8.6H6.0391"
